--- a/app/views/tutorials/feedbacks/new.html.erb
+++ b/app/views/tutorials/feedbacks/new.html.erb
@@ -1,7 +1,18 @@
-Hi! Thank you so much for providing any feedback you have on the tutorial <%= @tutorial.name %>! Your feedback is anonymous. Please let us know about anything in particular that you found confusing, or anything that you liked or disliked, or really anything at all!
-
-<%= form_for :feedback do |f| %>
-  Feedback: <%= f.text_area :content %>
-            <%= hidden_field_tag 'feedback[tutorial_id]', @tutorial.id %>
-            <%= f.submit 'Send Feedback' %>
+<div class="copy">
+  Hi!
+</div>
+<div class="copy">
+  Thank you so much for providing any feedback you have on the tutorial <%= @tutorial.name %>!
+</div>
+<div class="copy">
+  Your feedback is anonymous.
+</div>
+<div class="copy">
+  Please let us know about anything in particular that you found confusing, or anything that you liked or disliked, or really anything at all!
+</div>
+<%= form_for :feedback, html: { class: "form" } do |f| %>
+  <%= f.text_area :content, class: "text-area"  %>
+  <%= hidden_field_tag 'feedback[tutorial_id]', @tutorial.id %>
+  <br/>
+  <%= f.submit 'Send Feedback', class: "submit-button" %>
 <% end %>
